# cgal-community-plugins

./: CMakeLists.txt  LICENSE  README.md  stkCGAL3DPolyhedralMesher.cxx  stkCGAL3DPolyhedralMesher.h  stkCGALARAPUVParametrization.h  stkCGALAbstractUVParametrization.cxx  stkCGALAbstractUVParametrization.h  stkCGALBoolean.cxx  stkCGALBoolean.h  stkCGALBoolean2DMesher.cxx  stkCGALBoolean3DMesher.cxx  stkCGALBoolean3DMesher.h  stkCGALEfficientRANSAC.cxx  stkCGALEfficientRANSAC.h  stkCGALIsotropicRemeshingFilter.cxx  stkCGALIsotropicRemeshingFilter.h  stkCGALPolygonSetOrientedSideClassifier.cxx  stkCGALPolygonSetOrientedSideClassifier.h  stkCGALPolygonUtilities.h  stkCGALRegionGrowing.cxx  stkCGALRegionGrowing.h  stkCGALSelfIntersectionMeasurer.cxx  stkCGALUtilities.cxx  stkCGALUtilities.h  vtk.module
CGAL3DPolyhedralMesher/: CMakeLists.txt  plugin.cmake  vtkCGAL3DPolyhedralMesher.cxx  vtkCGAL3DPolyhedralMesher.h  vtkCGAL3DPolyhedralMesher.xml
CGALBoolean/: CMakeLists.txt  plugin.cmake  vtkCGALBoolean.cxx  vtkCGALBoolean.h  vtkCGALBoolean.xml
Module/: CMakeLists.txt  stkCGAL3DConvexHull.cxx  stkCGAL3DPolyhedralMesher.cxx  stkCGALARAPUVParametrization.h  stkCGALAlphaWrapping.h  stkCGALBoolean2DMesher.cxx  stkCGALBoolean2DMesher.h  stkCGALBoolean3DMesher.cxx  stkCGALBoolean3DMesher.h  stkCGALDuplicateNonManifoldVertices.h  stkCGALEfficientRANSAC.cxx  stkCGALFillHoles.h  stkCGALIsotropicRemeshingFilter.cxx  stkCGALLSCMUVParametrization.cxx  stkCGALLSCMUVParametrization.h  stkCGALPoissonReconstructionMesher.cxx  stkCGALPoissonReconstructionMesher.h  stkCGALPolyLineSetToPolygonSet.cxx  stkCGALPolygonMeshSmoothingOperator.cxx  stkCGALPolygonMeshSmoothingOperator.h  stkCGALPolygonOffset.h  stkCGALPolygonOrientOperator.h  stkCGALPolygonSetToPolyLineSet.cxx  stkCGALPolygonSetToPolyLineSet.h  stkCGALPolygonUtilities.cxx  stkCGALPolygonUtilities.h  stkCGALRegionFairingOperator.h  stkCGALRegionGrowing.cxx  stkCGALRegionGrowing.h  stkCGALSelfIntersectionMeasurer.cxx  stkCGALSelfIntersectionMeasurer.h  stkCGALSurfaceMeshTopology.cxx  stkCGALUtilities.h  vtk.module
Module/Testing/: CMakeLists.txt  TestCGAL2DConstrainedDelaunayTriangulationMesher.cxx  TestCGAL3DConvexHull.cxx  TestCGAL3DPolyhedralMesher.cxx  TestCGALAlphaWrapping.cxx  TestCGALBoolean2DMesher.cxx  TestCGALBoolean3DMesher.cxx  TestCGALDuplicateNonManifoldVertices.cxx  TestCGALEfficientRANSAC.cxx  TestCGALFillHoles.cxx  TestCGALInit.cxx  TestCGALIsotropicRemeshing.cxx  TestCGALPoissonReconstructionMesher.cxx  TestCGALPolygonOffset.cxx  TestCGALPolygonOrientOperator.cxx  TestCGALPolygonSetOrientedSideClassifier.cxx  TestCGALRegionFairingOperator.cxx  TestCGALRegionGrowing.cxx  TestCGALSelfIntersectionMeasurer.cxx  TestCGALSurfaceMeshTopology.cxx  TestCGALUVParametrization.cxx
Module/Testing/Data/: self-intersectionsData.vtp
Plugins/CGAL/: CGAL.plugin  CMakeLists.txt
Plugins/CGAL/CGALFilters/: CMakeLists.txt  vtk.module  vtkCGAL3DPolyhedralMesher.h  vtkCGALBoolean.h
Plugins/CGAL/stkCGAL/: CMakeLists.txt  vtk.module
Plugins/CGAL/vtkCGAL/: CMakeLists.txt  stkCGAL3DPolyhedralMesher.cxx  stkCGAL3DPolyhedralMesher.h  vtk.module  vtkCGAL2DBoolean.cxx  vtkCGAL2DBoolean.h  vtkCGAL2DPolygonParentTree.cxx  vtkCGAL2DPolygonParentTree.h  vtkCGAL3DPolyhedralMesher.cxx  vtkCGAL3DPolyhedralMesher.h  vtkCGALARAPParametrization.cxx  vtkCGALARAPParametrization.h  vtkCGALARAPUVParametrization.cxx  vtkCGALARAPUVParametrization.h  vtkCGALAbstractUVParametrization.cxx  vtkCGALAbstractUVParametrization.h  vtkCGALBoolean.cxx  vtkCGALBoolean.h  (+40 more)
src/: CMakeLists.txt  stkCGAL2DConstrainedDelaunayTriangulationMesher.cxx  stkCGAL2DConstrainedDelaunayTriangulationMesher.h  stkCGAL3DConvexHull.cxx  stkCGAL3DConvexHull.h  stkCGAL3DPolyhedralMesher.cxx  stkCGAL3DPolyhedralMesher.h  stkCGALARAPUVParametrization.cxx  stkCGALARAPUVParametrization.h  stkCGALAlphaWrapping.cxx  stkCGALBoolean2DMesher.cxx  stkCGALBoolean2DMesher.h  stkCGALBoolean3DMesher.cxx  stkCGALBoolean3DMesher.h  stkCGALConstrainedDelaunayTriangulation.cxx  stkCGALConstrainedDelaunayTriangulation.h  stkCGALDuplicateNonManifoldVertices.cxx  stkCGALEfficientRANSAC.cxx  stkCGALEfficientRANSAC.h  stkCGALFillHoles.cxx  stkCGALFillHoles.h  stkCGALIsotropicRemeshingFilter.h  stkCGALLSCMUVParametrization.cxx  stkCGALLSCMUVParametrization.h  stkCGALPolyLineSetToPolygonSet.cxx  stkCGALPolyLineSetToPolygonSet.h  stkCGALPolygonMeshSmoothingOperator.cxx  stkCGALPolygonMeshSmoothingOperator.h  stkCGALPolygonOffset.cxx  stkCGALPolygonOrientOperator.cxx  stkCGALPolygonOrientOperator.h  stkCGALPolygonSetOrientedSideClassifier.cxx  stkCGALPolygonSetOrientedSideClassifier.h  stkCGALPolygonSetToPolyLineSet.cxx  stkCGALPolygonSetToPolyLineSet.h  stkCGALPolygonUtilities.cxx  stkCGALPolygonUtilities.h  stkCGALRegionFairingOperator.cxx  stkCGALRegionGrowing.cxx  stkCGALRegionGrowing.h  (+14 more)
src/Resources/: cgal_filters.xml  cgal_proxies.xml  stkCGAL2DConstrainedDelaunayTriangulationMesher.xml  stkCGAL3DAlphaWrapping.xml  stkCGAL3DConvexHull.xml  stkCGAL3DPolyhedralMesher.xml  stkCGALARAPUVParametrization.xml  stkCGALAbstractUVParametrization.xml  stkCGALBoolean2DMesher.xml  stkCGALBoolean3DMesher.xml  stkCGALDuplicateNonManifoldVertices.xml  stkCGALEfficientRANSAC.xml  stkCGALFillHoles.xml  stkCGALIsotropicRemeshingFilter.xml  stkCGALLSCMUVParametrization.xml  stkCGALPoissonReconstructionMesher.xml  stkCGALPolygonMeshSmoothingOperator.xml  stkCGALPolygonOffset.xml  stkCGALPolygonOrientOperator.xml  stkCGALPolygonSetOrientedSideClassifier.xml  stkCGALRegionFairing.xml  stkCGALRegionGrowing.xml  stkCGALSelfIntersectionMeasurer.xml  stkCGALSurfaceMeshTopology.xml
src/Testing/: CMakeLists.txt  TestCGAL2DConstrainedDelaunayTriangulationMesher.cxx  TestCGALBoolean3DMesher.cxx  TestCGALDuplicateNonManifoldVertices.cxx  TestCGALEfficientRANSAC.cxx  TestCGALFillHoles.cxx  TestCGALPolygonOffset.cxx  TestCGALPolygonOrientOperator.cxx  TestCGALPolygonSetOrientedSideClassifier.cxx  TestCGALSelfIntersectionMeasurer.cxx  TestCGALSurfaceMeshTopology.cxx  stkTestCGALSurfaceMeshTopology.cxx  testStkCGALSurfaceMeshTopology.cxx
(+4 files in other folders)
